fixed the arrow alignment and triage overview background

--- a/app/src/Components/PatientNavList.css
+++ b/app/src/Components/PatientNavList.css
@@ -30,9 +30,6 @@ ul li {
 div#linkList{
     width: 92%;
     height: stretch;
-    /* display: inline-flexbox; */
-    /* border-radius: 20px 0px 0px 20px; */
-    /* text-align: center; */
 }
 
 h3.long {
@@ -53,16 +50,12 @@ h3.medium {
     width: 12%;
     display: inline-flex;
     margin: auto;
-    height: inherit;
+    height: 100%;
     color: black;
-    /* background-color: greenyellow;
-    background-position-y: 0; */
     font-size: 18px;
     font-weight: bold;
     border-radius: 20px 0px 0px 20px;
-    /* vertical-align: middle; */
     padding-top: 15px;
-    padding-bottom: 10px;
     justify-content: center;
 }
 h3.short {
